# vulcan-api

./: .gitignore  .readthedocs.yml  .travis.yml  LICENSE  README.md  README.rst  bitbucket-pipelines.yml  messageget.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish.yml  test.yml
docs/source/: conf.py  full-docs.rst  getting-started.rst  index.rst  installation.rst  pelna-dokumentacja.rst  szybki-start.rst
docs/source/dzienniczek/: 01-registration.rst  02-basic-usage.rst  full-docs.rst  index.rst
docs/source/getting-started/: 00-concepts.rst  01-info.rst  02-keystore.rst  03-account.rst  04-client.rst  10-data-fetching.rst  basic-usage.rst  fetching-data.rst  installation.rst  registration.rst
docs/source/hebe/: 00-concepts.rst  01-info.rst  02-keystore.rst  04-client.rst  10-data-fetching.rst  full-docs.rst  index.rst
docs/source/quickstart/: basic-usage.rst  installation.rst  register.rst
docs/source/szybki-start/: instalacja.rst  podstawowe-uzycie.rst  rejestracja.rst
docs/source/usage/: homeworks.rst  lesson-plan.rst  tests.rst
tests/: __init__.py  conftest.py  test_attendance.py  test_dictionaries.py  test_exams.py  test_fetch.py  test_grades.py  test_homework.py  test_homeworks.py  test_lesson_plan.py  test_lessons.py  test_message.py  test_messages.py  test_plan_lekcji.py  test_sprawdziany.py  test_tests.py  test_zadania_domowe.py  utils.py
vulcan/: __init__.py  _account.py  _api.py  _api_helper.py  _attendance.py  _certificate.py  _class.py  _client.py  _data.py  _dictionaries.py  _employee.py  _endpoints.py  _exam.py  _exceptions.py  _grade.py  _hebe_client.py  _hebe_data.py  _homework.py  _keystore.py  _lesson.py  _message.py  _notice.py  _period.py  _pupil.py  _request_signer.py  _school.py  _student.py  _subject.py  _teacher.py  _test.py  _utils.py  _vulcan.py  models.py  utils.py  vulcan.py
vulcan/data/: __init__.py  _addressbook.py  _attendance.py  _exam.py  _grade.py  _homework.py  _lesson.py  _lucky_number.py  _message.py  _messagebox.py
vulcan/hebe/: __init__.py  _account.py  _api.py  _api_helper.py  _endpoints.py  _hebe_client.py  _hebe_data.py  _keystore.py  _serializable.py  _utils_hebe.py  _vulcan_hebe.py
vulcan/hebe/data/: __init__.py  _attendance.py  _exam.py  _grade.py  _homework.py  _lesson.py  _lucky_number.py
vulcan/hebe/model/: __init__.py  _attachment.py  _datetime.py  _period.py  _pupil.py  _school.py  _serializable.py  _student.py  _subject.py  _teacher.py  _team.py  _timeslot,py  _timeslot.py  _unit.py
vulcan/model/: __init__.py  _attachment.py  _datetime.py  _messagebox.py  _period.py  _pupil.py  _school.py  _serializable.py  _student.py  _subject.py  _teacher.py  _team.py  _timeslot.py  _unit.py
