[metadata]
name = vulcan
version = attr: vulcan.__version__
license = MIT
license_file = LICENSE

author = Kacper Ziubryniewicz
author_email = kapi2289@gmail.com

description = API for Vulcan e-journal
long_description = file: README.md
long_description_content_type = text/markdown

keywords = Vulcan UONETPlus Dzienniczek API
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: Polish
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Education
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules

url = https://bitbucket.org/kapi2289/vulcan-api

[options]
zip_safe = True
include_package_data = True
packages = find:
python_requires = >=3.0, <4.0
install_requires =
